--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dotenv>=0.9.9",
+    "groq>=0.30.0",
     "ipykernel>=6.29.5",
     "langchain>=0.3.26",
+    "langchain-groq>=0.3.6",
     "langgraph>=0.5.2",
 ]
